<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_friend_item_add"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ruanjian.xin.xiaocaidao.ui.Friend.FriendItemAdd"
    android:background="#ededed">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/back_icon"/>
        <TextView
            android:id="@+id/friend_title"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="12dp"
            android:text="@string/add_friend_item"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:layout_alignParentRight="true"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:textColor="#e51c23"
            android:textSize="20dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:hint="@string/add_friend_hint_title"
            android:background="@null"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginBottom="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:minLines="3"
            android:gravity="top"
            android:textSize="18dp"
            android:hint="@string/add_friend_hint_text"
            android:background="@null"/>
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/friend_add_button_shape"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp">
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:background="@drawable/friend_add_backgound"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/add_tag"/>
        <View style="@style/PersonalLine_nonemargin" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <Button
                android:id="@+id/Tag01"
                style="@style/FriendTagStyle"
                android:text="@string/tag01"/>
            <Button
                android:id="@+id/Tag02"
                style="@style/FriendTagStyle"
                android:text="@string/tag02"/>
            <Button
                android:id="@+id/Tag03"
                style="@style/FriendTagStyle"
                android:text="@string/tag03"/>
            <Button
                android:id="@+id/Tag04"
                style="@style/FriendTagStyle"
                android:text="@string/tag04"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <Button
                android:id="@+id/Tag05"
                style="@style/FriendTagStyle"
                android:text="@string/tag05"/>
            <Button
                android:id="@+id/Tag06"
                style="@style/FriendTagStyle"
                android:text="@string/tag06"/>
            <Button
                android:id="@+id/Tag07"
                style="@style/FriendTagStyle"
                android:text="@string/tag07"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
