<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <!--头像与用户名-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <!--用户头像-->
                <!--<ImageView-->
                <!--android:layout_width="60dp"-->
                <!--android:layout_height="60dp"-->
                <!--android:background="#fff"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginRight="8dp"/>-->
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cv_comment_user_pic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/user_pic"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FF000000"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_name"
                    android:textSize="16dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:id="@+id/textView" />
            </LinearLayout>

            <!--标签-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp">
                <TextView
                    android:id="@+id/Tag_01"
                    android:text="@string/tag01"
                    android:layout_marginRight="8dp"
                    style="@style/TagStyle"/>
                <TextView
                    android:id="@+id/Tvlv_commentMarker_02"
                    android:text="@string/tag05"
                    style="@style/TagStyle"/>
            </LinearLayout>
        </LinearLayout>

        <!--分割线-->
        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="#8b8b8b"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:layout_marginBottom="5dp"/>-->
        <View style="@style/PersonalLine" />

        <!--晒图片-->
        <ImageView
            android:layout_width="320dp"
            android:layout_height="170dp"
            android:background="@drawable/img0"
            android:layout_marginLeft="5dp"
            android:scaleType="fitXY"/>

        <!--话题-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_item_text"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/textView2" />

        <!--底部信息-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp">
            <!--发布时间-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/Tvlv_commentUpDate"
                    android:text="2016-11-8"
                    style="@style/FriendBottomTextStyle"/>
                <TextView
                    android:text="@string/release"
                    style="@style/FriendBottomTextStyle"/>
            </LinearLayout>

            <!--点赞人数、评论数-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center">
                <!--点赞人数-->
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="#fff"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/Tvlv_commentPraise"
                    android:text="200"
                    style="@style/FriendBottomTextStyle"/>
                <TextView
                    android:text="赞过"
                    android:layout_marginRight="20dp"
                    style="@style/FriendBottomTextStyle"/>

                <!--评论数-->
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="#fff"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/Tvlv_commentComment"
                    android:text="200"
                    style="@style/FriendBottomTextStyle"/>
                <TextView
                    android:text="评论"
                    style="@style/FriendBottomTextStyle"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>