<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <!--日期，点击数-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_time" />
            <TextView
                android:id="@+id/click_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:text="2333"/>
            <ImageView
                android:id="@+id/click_logo"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_toLeftOf="@id/click_count"
                android:src="@drawable/new_click_logo" />
        </RelativeLayout>

        <View style="@style/PersonalLine" />

        <!--头像与用户名，收藏-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <!--用户头像-->
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/cv_comment_user_pic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/user_pic"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_name"
                    android:textSize="16dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/new_collect_logo"/>
            </LinearLayout>
        </LinearLayout>
        <!--内容-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:text="@string/new_item_text"/>
    </LinearLayout>

</LinearLayout>